--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ tests/report/
 .vagrant/
 cookbooks/
 Vagrantfile
+
 SME_UnB/cover/
 SME_UnB/.coverage
 SME_UnB/.cache
 /SME_UnB/SME_UnB/logging.logging
+SME_UnB/htmlcov/
