Refactoring pusher script outside html

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,5 @@ install:
 
 # Run all scripts to testing the application: unit test, coverage,
 # Acceptance Tests and outhers
-script:
-    - nosetests
-    - python2 SME_UnB/manage.py test --with-coverage SME_UnB/users/
+#- nosetests
+#   - python2 SME_UnB/manage.py test --with-coverage SME_UnB/users/
