--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,7 @@ install:
 
 # Run all scripts to testing the application: unit test, coverage,
 # Acceptance Tests and outhers
-#- nosetests
-#   - python2 SME_UnB/manage.py test --with-coverage SME_UnB/users/
+#
+#
+scipt:
+    - python2 manage.py test --with-coverage src/users/ src/report/ src/retrieve_password --cover-package=users --cover-tests --cover-html
